[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
thiserror = "1.0.58"
serde ={ version = "1.0.197", features = ["derive"] }
fixed = {version ="1.27.0", features = ["serde-str"]}


[dev-dependencies]
expect-test = "1.4.1"
